@@ -9,105 +9,75 @@
 	<description>Neuronal evolution driven by mutation and selection
 	</description>
 
-	<parent>
-		<groupId>com.spontech</groupId>
-		<artifactId>base-pom</artifactId>
-		<version>1.5.5</version>
-	</parent>
-
-
-	<distributionManagement>
-		<site>
-			<id>site</id>
-			<url>dav:http://develop.spontech-spine.com/site/EvolutionBrain</url>
-		</site>
-		<repository>
-			<id>site</id>
-		</repository>
-	</distributionManagement>
-
-	<!-- tw: This is for the mvn scm:bootstrap, part 1/2 -->
-	<scm>
-		<connection>scm:svn:http://develop.spontech-spine.com/repo/develop/EvolutionBrain/</connection>
-		<developerConnection>scm:svn:http://develop.spontech-spine.com/repo/develop/EvolutionBrain/</developerConnection>
-		<url>http://develop.spontech-spine.com/repo/develop/EvolutionBrain/</url>
-	</scm>
-
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.compiler.release>17</maven.compiler.release>
+		<jogl.version>2.6.0</jogl.version>
+	</properties>
 
 	<dependencies>
+		<!-- Modern JogAmp JOGL/GlueGen (replaces the 2011 vendored com.EvolutionBrain:* jars). -->
 		<dependency>
-			<groupId>com.EvolutionBrain</groupId>
-			<artifactId>jogl.all</artifactId>
-			<version>09.04.2011</version>
-		</dependency>
-		<dependency>
-			<groupId>com.EvolutionBrain</groupId>
+			<groupId>org.jogamp.gluegen</groupId>
 			<artifactId>gluegen-rt</artifactId>
-			<version>09.04.2011</version>
+			<version>${jogl.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.EvolutionBrain</groupId>
-			<artifactId>jocl</artifactId>
-			<version>09.04.2011</version>
+			<groupId>org.jogamp.gluegen</groupId>
+			<artifactId>gluegen-rt</artifactId>
+			<version>${jogl.version}</version>
+			<classifier>natives-macosx-universal</classifier>
 		</dependency>
 		<dependency>
-			<groupId>com.EvolutionBrain</groupId>
-			<artifactId>nativewindow.all</artifactId>
-			<version>09.04.2011</version>
+			<groupId>org.jogamp.jogl</groupId>
+			<artifactId>jogl-all</artifactId>
+			<version>${jogl.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.EvolutionBrain</groupId>
-			<artifactId>jmdns</artifactId>
-			<version>09.04.2011</version>
-		</dependency>
-		<dependency>
-			<groupId>com.EvolutionBrain</groupId>
-			<artifactId>jogl-native</artifactId>
-			<version>09.04.2011</version>
-			<classifier>${build.type}</classifier>
+			<groupId>org.jogamp.jogl</groupId>
+			<artifactId>jogl-all</artifactId>
+			<version>${jogl.version}</version>
+			<classifier>natives-macosx-universal</classifier>
 		</dependency>
 
 		<dependency>
-			<groupId>org.easytesting</groupId>
-			<artifactId>fest-swing</artifactId>
-			<version>1.2</version>
+			<groupId>org.jmdns</groupId>
+			<artifactId>jmdns</artifactId>
+			<version>3.6.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>4.11.0</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
-
 	<build>
-
 		<plugins>
-
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.2</version>
-				<executions>
-					<execution>
-						<id>unpack</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>unpack</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>com.EvolutionBrain</groupId>
-									<artifactId>jogl-native</artifactId>
-									<version>09.04.2011</version>
-									<classifier>${build.type}</classifier>
-									<type>jar</type>
-									<overWrite>true</overWrite>
-									<outputDirectory>${project.build.directory}/lib
-									</outputDirectory>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-				</executions>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.5.0</version>
+				<configuration>
+					<mainClass>tw.master.MasterProofMain</mainClass>
+					<!-- JOGL reflectively probes sun.awt.AppContext on AWT init; without
+					     this the app still runs (JOGL catches the failure) but logs noisy
+					     InaccessibleObjectException traces. -->
+					<options>
+						<option>--add-opens</option>
+						<option>java.desktop/sun.awt=ALL-UNNAMED</option>
+					</options>
+				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
 
